--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a class="link-header">Company</a>
         <a class="link-header">Blog</a>
         <a class="link-header">Log in</a>
-        <button class="button-header">Sign up</button>
+        <button onclick="cliquei()" class="button-header">Sign up</button>
     </header>
     
   <section class="img-logo">  
@@ -33,4 +33,5 @@
   </div>
 
 </body>
+<script src="script.js"></script>
 </html>
